# wellsouth-project

./: .env.example  .gitignore  README.md  pyproject.toml  test_logging.py  test_request.py
bampower/: __main__.py  _common.py  _constants.py  _file_validator.py  _logging.py
files/: watching.json
