[tool.poetry]
name = "bampower"
version = "1.0.0"
description = ""
authors = ["Ethan <ethanjohnleitch@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
validators = "^0.20.0"
jsonschema = "^4.18.3"
python-dotenv = "^1.0.0"
yagmail = "^0.15.293"
deepdiff = "^6.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
